cde1-project-policy.yaml
# deny everything into the project
# even resources in project can't reach each other
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-by-default
spec:
  podSelector:
  ingress: []

# allow canterbury (support1-app1) to reach the scopuli (cde1-app1)
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: canterbury-to-scopuli
spec:
  # destination is scopuli
  podSelector:
    matchLabels:
      role: scopuli
  # source is canterbury specifically in support1 (CA-2216862)
  ingress:
    - ports:
      - protocol: TCP
        port: 8080
      from:
        - namespaceSelector:
            matchLabels:
              location: CA-2216862
